--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/node": "^14.14.37",
         "snowpack": "^3.2.2"
     }
 }
